# LogManager

./: CMakeLists.txt  README.md  main.cpp  run.bat
src/: LogM.cpp  LogM.h
